spacing issue and when translating the buy now boxes they were scrolling the document horizontally so disabled that

--- a/scss/global.scss
+++ b/scss/global.scss
@@ -10,6 +10,7 @@ $primary_text: #959595;
 body {
   font-family: 'Open Sans', sans-serif;
   background: $white;
+  overflow-x: hidden;
 }
 
 h1, h2, h3, h4, h5, h6 {
