--- a/scss/template/footer.scss
+++ b/scss/template/footer.scss
@@ -68,6 +68,7 @@ footer {
     }
     .spam-message {
       font-size: 10px;
+      line-height: 1.5em;
       color: rgba(255, 255, 255, 0.2);
       margin-bottom: 40px;
       display: block;
